testsuite/bsc.interra/preprocessorTestcases/undef/Undef_NoMacroName.bsv.bsc-out.expected
checking package dependencies
Error: "Undef_NoMacroName.bsv", line 16, column 1: (P0222)
  missing macro identifier after ``undef'
